# jobs_crawler

./: .env  .gitignore  Dockerfile.airflow  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-airflow.txt  requirements.txt  test_output.html
airflow/dags/: dbt_pipeline.py  job_crawler.py  job_lakehouse_pipeline.py
configs/airflow/: dbt_pipeline.yaml  job_crawler.yaml
configs/crawlers/: topcv.yaml  topdev.yaml
crawler/: Dockerfile  requirements.txt  topcv.py
dbt/: .user.yml  dbt_project.yml  job_lakehouse.duckdb  profiles.yml
dbt/models/marts/: dim_company.sql  dim_job.sql  fact_job_posting.sql
dbt/models/staging/: schema.yml  stg_jobs.sql
debug/: page_debug.html
docker/: Dockerfile.airflow  Dockerfile.streamlit  Dockerfile.superset
implementation_plan/docs/: bigquery_vs_rdbms_comparison.md  data_model_design.md  implementation_plan.md
schemas/raw/: job_listing.avsc
scratch/: check_crawl_quality.py
scripts/: app.py  dashboard.py  init_db.sql  query.py  query_app.py  query_flask.py  register_schema.py  superset-init.sh
src/: config.py  kafka_consumer.py  kafka_producer.py  run_consumer.py
src/airflow/generator/: cli.py  loader.py  templates.py
src/airflow/operators/: crawler_operators.py
src/common/: parsers.py
src/crawler/careerviet/: career_viet.py
src/crawler/topcv/: topcv_crawler.py
src/crawlers/: Dockerfile  __init__.py  base.py  generic_crawler.py  requirements.txt  sink.py  topcv.py
src/kafka/: run_consumer.py
src/model/: model.py
src/sinks/: minio_sink.py
src/utils/: utils.py
(+2 files in other folders)
