[project]
name = "crawl-jobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "fake-useragent>=2.2.0",
    "google-cloud-bigquery>=3.17.2",
    "google-cloud-storage>=2.14.0",
    "lxml>=5.1.0",
    "pandas>=2.1.4",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.9",
    "pyarrow>=14.0.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "scrapy>=2.14.1",
    "selenium>=4.40.0",
    "sqlalchemy>=2.0.25",
    "webdriver-manager>=4.0.2",
]
